[package]
name = "rust101"
version = "0.1.0"
authors = ["Adarsh Pannu <13154869+adarshpannu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
typed-arena = "2.0.1"
id-arena = "2"
